# Development_AI

./: .gitignore  CLAUDE.md  PropAI_v43_PartA_부트스트랩_DB스키마.md  PropAI_v43_PartA_부트스트랩_DB스키마.mdZone.Identifier  PropAI_v43_PartB_인증_외부API_AVM_법규AI.md  PropAI_v43_PartB_인증_외부API_AVM_법규AI.mdZone.Identifier  PropAI_v43_PartC_설계AI_금융세금_한국특화_시공ESG.md  PropAI_v43_PartC_설계AI_금융세금_한국특화_시공ESG.mdZone.Identifier  PropAI_v43_PartD_MLOps_프론트엔드_인프라_AI고도화.md  PropAI_v43_PartE_비즈인프라_G81-G85.md  PropAI_v43_PartF_G86-G90.md  PropAI_v43_PartF_G86-G90.mdZone.Identifier  PropAI_v43_PartG_G91-G95.md  PropAI_v43_PartH_통합검증_배포_운영.md  PropAI_v43_완전구축_마스터인덱스.md  PropAI_v43_완전구축_마스터인덱스.mdZone.Identifier  PropAI_v49_0_만장일치_최종완성판.md  PropAI_v49_0_만장일치_최종완성판.mdZone.Identifier  PropAI_v49_Master_Gap123_WorldFirst214_DB91.md  PropAI_v49_Master_Gap123_WorldFirst214_DB91.mdZone.Identifier  PropAI_v53_PartA_마스터인덱스.md  PropAI_v53_PartA_마스터인덱스.mdZone.Identifier  PropAI_v53_PartB_백엔드코어.md  PropAI_v53_PartB_백엔드코어.mdZone.Identifier  PropAI_v53_PartC_ESG_고급서비스.md  PropAI_v53_PartC_ESG_고급서비스.mdZone.Identifier  PropAI_v58_PartA_부트스트랩_DB스키마.md  PropAI_v58_PartA_부트스트랩_DB스키마.mdZone.Identifier  PropAI_v58_PartB_백엔드코어.md  PropAI_v58_PartB_백엔드코어.mdZone.Identifier  PropAI_v58_PartC_고급AI_ESG_인허가.md  PropAI_v58_PartC_고급AI_ESG_인허가.mdZone.Identifier  PropAI_v58_PartD_시공_운영_전주기.md  PropAI_v58_PartD_시공_운영_전주기.mdZone.Identifier  PropAI_v58_마스터인덱스.md  PropAI_v58_마스터인덱스.mdZone.Identifier  PropAI_v61_IDE빌드_Part1_인프라_DB환경.md  PropAI_v61_IDE빌드_Part2_AI_CAD_설계시스템.md  PropAI_v61_IDE빌드_Part2_AI_CAD_설계시스템.mdZone.Identifier  PropAI_v61_IDE빌드_Part3_BIM_공사비시스템.md  (+18 more)
propai-platform/apps/api/: .env.example  Dockerfile  __init__.py  alembic.ini  config.py  exceptions.py  logging_config.py  main.py  metrics.py  middleware.py  pyproject.toml  rate_limit.py  requirements.oracle.txt  requirements.txt  test_integration_sim.py  versioning.py
propai-platform/apps/api/agents/: __init__.py  langgraph_orchestrator.py  propai_orchestrator.py
propai-platform/apps/api/alembic/: env.py
propai-platform/apps/api/app/: main.py
propai-platform/apps/api/auth/: __init__.py  google_handler.py  jwt_handler.py  kakao_handler.py  naver_handler.py  oauth_common.py  rbac.py
propai-platform/apps/api/config_data/: carbon_factors_ifc.default.json  gresb_benchmarks_2025.default.json  seumter_permit_rules.default.json
propai-platform/apps/api/core/: cache.py  coordinator.py  database.py  observability.py  quality_gate.py  tracing.py
propai-platform/apps/api/database/: __init__.py  init_qdrant.py  sales_market_ddl.py  session.py
propai-platform/apps/api/integrations/: __init__.py  base_client.py  court_client.py  ecos_client.py  gir_client.py  hub_permit_client.py  hug_client.py  kcci_client.py  kepco_client.py  kets_client.py  kma_client.py  kosis_client.py  lh_client.py  mois_client.py  molit_client.py  nice_client.py  region_codes.py  replicate_client.py  roboflow_client.py  rtms_client.py  seumter_client.py  sgis_client.py  vworld_client.py
propai-platform/apps/api/routers/: __init__.py  admin_lists.py  agents.py  ai_assistant.py  ai_costs.py  analytics.py  api_keys.py  auction.py  auth.py  auto_zoning.py  avm.py  avm_vision.py  billing.py  bim.py  blockchain.py  building_compliance.py  cad_correction.py  chatbot.py  climate.py  compliance.py  construction.py  contractors.py  contracts.py  cost_intelligence.py  dashboard.py  data_integrity.py  design.py  design_generation.py  design_references.py  development_methods.py  digital_twin.py  domain_agents.py  drawing.py  drone.py  energy.py  environment.py  esg.py  esign.py  eu_taxonomy.py  expert_panel.py  (+42 more)
propai-platform/apps/api/scripts/: export_scoped_secrets.py  extract_boq_master.py  reencrypt_secret_store.py  simulate_boq_user.py  train_risk_model.py  verify_ordinance_slope_live.py
propai-platform/apps/api/security/: encryption.py
propai-platform/apps/api/services/: __init__.py  ai_costs_service.py  ai_usage_tracker.py  asset_intelligence_service.py  auction_service.py  audit_service.py  auth_tokens.py  avm_service.py  bim_ifc_service.py  blockchain_service.py  building_compliance_service.py  cad_auto_correction_service.py  carbon_calculation_service.py  chatbot_service.py  climate_risk_service.py  compliance_service.py  construction_ai_service.py  contract_generator.py  contractor_service.py  cost_escalation_engine.py  demand_forecast_service.py  design_ai_service.py  development_method_service.py  digital_twin_service.py  digital_twin_status_service.py  domain_agents_service.py  drone_iot_service.py  dt_service.py  energy_service.py  esg_service.py  eu_taxonomy_service.py  facility_reservation_service.py  feasibility_service.py  floor_plan_image_service.py  green_certification_service.py  investor_report_service.py  jeonse_risk_service.py  kcci_material_price_service.py  kdx_integration_service.py  lcc_service.py  (+26 more)
propai-platform/apps/api/tests/: __init__.py  conftest.py  factories.py  test_80_percent_push.py  test_a3_legal_guard_surfaces.py  test_access_basis.py  test_access_basis_wiring_items.py  test_acquisition_stage_engine.py  test_aggregation_engine.py  test_ai_assistant_quality.py  test_ai_costs_service.py  test_ai_recommendation.py  test_ai_usage_tracker.py  test_arch_grammar.py  test_architecture_doc.py  test_asset_intelligence_service.py  test_auction_demock_court.py  test_auction_detail_fix.py  test_auction_monitor.py  test_auction_onbid_pbanclist.py  test_auction_onbid_ranking.py  test_auction_service.py  test_audit_followup_sweep.py  test_audit_service.py  test_auto_design_engine.py  test_auto_recommend_optimization_pipeline_wiring.py  test_auto_zoning_age_status_classify.py  test_avg_area_exclusive_unify.py  test_avm_comparables_contract.py  test_avm_cross_validate.py  test_avm_mape.py  test_avm_service.py  test_avm_train.py  test_base_client.py  test_base_client_snapshot_hook.py  (+489 more)
propai-platform/services/deliberation-review/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  deploy_engine.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
(+3048 files in other folders)
