[project]
name = "propai-api"
version = "30.0.0"
description = "PropAI 부동산개발 전주기 AI 자동화 플랫폼 - 백엔드 API"
requires-python = ">=3.12"

dependencies = [
    # 코어
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-multipart>=0.0.12",
    # 데이터베이스
    "sqlalchemy[asyncio]>=2.0.29",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "geoalchemy2>=0.15.0",
    "psycopg2-binary>=2.9.0",
    # 캐시/통신
    "redis[hiredis]>=5.0.0",
    "httpx>=0.27.0",
    "aiohttp>=3.10.0",
    "tenacity>=8.2.0",
    "sse-starlette>=2.0.0",
    "xmltodict>=0.13.0",
    # AI/ML
    "langchain>=0.2.0",
    "langchain-anthropic>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.0.40",
    "qdrant-client>=1.9.0",
    "xgboost>=2.0.0",
    "scikit-learn>=1.4.0",
    "lightgbm>=4.5.0",
    "pandas>=2.2.0",
    "scipy>=1.14.0",
    "mlflow>=2.11.0",
    "ctgan>=0.10.0",
    "evidently>=0.4.26",
    # GIS / CAD
    "geopandas>=1.0.0",
    "shapely>=2.0.0",
    "pyproj>=3.7.0",
    "folium>=0.18.0",
    "ezdxf>=1.3.0",
    "svgwrite>=1.4.0",
    # BIM
    "ifcopenshell>=0.7.0",
    "numpy>=1.26.0",
    "pillow>=10.3.0",
    # 이미지 / CV
    "opencv-python-headless>=4.10.0",
    # 문서
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "fpdf2>=2.8.0",
    # 블록체인
    "web3>=6.15.0",
    "eth-account>=0.11.0",
    # 드론/IoT
    "paho-mqtt>=2.0.0",
    "reportlab>=4.1.0",
    # 외부 API
    "replicate>=0.25.0",
    "openai>=1.14.0",
    # 스토리지
    "minio>=7.2.0",
    # 운영
    "sentry-sdk[fastapi]>=1.43.0",
    "prometheus-client>=0.20.0",
    "structlog>=24.1.0",
    "slowapi>=0.1.9",
    "pytz>=2024.1",
    # 보안
    "cryptography>=42.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "casbin>=1.33.0",
    "bcrypt>=4.0.0,<5.0.0",
    "PyJWT>=2.9.0",
    # 에너지 시뮬레이션: eppy 제거(코드 import 0·미구현 계획). beautifulsoup4<=4.8.0 강제로
    # 전체 의존성 설치 차단(langchain 등 bs4 4.12 필요) → 실제 구현 시 bs4 호환 버전으로 재도입.
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
    "factory-boy>=3.3.0",
    "faker>=24.0.0",
    "ruff>=0.3.4",
    "mypy>=1.9.0",
]
worker = [
    "celery>=5.3.0",
    "flower>=2.0.0",
    "arq>=0.25",
]
ml-gpu = [
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "faiss-cpu>=1.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# FastAPI는 Depends()를 인자 기본값으로 사용하는 것이 표준 패턴
"apps/api/routers/*.py" = ["B008"]
"routers/*.py" = ["B008"]
"app/routers/*.py" = ["B008"]
"apps/api/app/routers/*.py" = ["B008"]
"apps/api/auth/*.py" = ["B008"]
"auth/*.py" = ["B008"]
"apps/api/app/api/endpoints/**/*.py" = ["B008"]
"app/api/endpoints/**/*.py" = ["B008"]
# 테스트: 한국어 함수명(N802) + sys.path.insert 임포트 순서(E402)
"**/tests/*.py" = ["N802", "E402"]
"**/tests/**/*.py" = ["N802", "E402"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
# 외부 라이브러리 스텁 누락 관련 (FastAPI, SQLAlchemy 등)
disable_error_code = ["misc", "type-arg"]

[[tool.mypy.overrides]]
module = [
    "casbin.*",
    "ifcopenshell.*",
    "replicate.*",
    "minio.*",
    "web3.*",
    "eth_account.*",
    "paho.*",
    "mlflow.*",
    "xgboost.*",
    "ctgan.*",
    "qdrant_client.*",
    "jose.*",
    "passlib.*",
    "sse_starlette.*",
    "reportlab.*",
    "evidently.*",
    "langchain.*",
    "langchain_anthropic.*",
    "langchain_openai.*",
    "langgraph.*",
    "geoalchemy2.*",
    "roboflow.*",
    "alembic",
    "alembic.*",
    "openai",
    "openai.*",
    "prometheus_client",
    "prometheus_client.*",
    "redis",
    "redis.*",
    "pandas",
    "pandas.*",
    "structlog",
    "structlog.*",
    "slowapi",
    "slowapi.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["../../tests"]

[tool.coverage.run]
omit = [
    "apps/api/database/migrations/*",
    "apps/api/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]
